<resources>
    <string name="app_name">Travel\'s Dream</string>
    <string name="Wellcome">Bienvenido</string>
    <string name="EmailEnter">Ingrese Correo</string>
    <string name="PassWEnter">Ingrese Contraseña</string>
    <string name="Name">Ingrese Nombre</string>
    <string name="LastName">Ingrese apellido</string>
    <string name="Phone">Ingrese Telefono</string>
    <string name="SingIn">Ingresar</string>
    <string name="NewUser2">Crear Usuario?</string>
    <string name="NewUser1">¿Desea</string>
    <string name="UserCreate">Crear Nuevo Usuario</string>
    <string name="PassWConfirm">Confirme Contraseña</string>
    <string name="Btn_SingUp">Registrar</string>
    <string name="Nick">Ingrese Usuario</string>
    <string name="Mobile">Ingrese Celular</string>
    <string name="ActivityList">Listado de Actividades</string>
    <string name="NameAct">Nombre Actividad</string>
    <string name="Descrip">Descripción</string>
    <string name="proveedor">Proveedor</string>
    <string name="mochilero">Mochilero</string>
    <string name="Departament">Ingrese Departamento</string>
    <string name="Municipio">Ingrese Municipio</string>
    <string name="NewActivity">Crear Nueva Actividad</string>
    <string name="InNameAct">Nombre de la Actividad</string>
    <string name="ExactPlace">Ingrese lugar exacto</string>
    <string name="Price">Ingrese Precio</string>
</resources>