<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_2"
    tools:context=".UserCreate">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="#4390AA79"
        android:elevation="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/UserCreate"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/LastName"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Phone"
            android:inputType="phone"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EmailEnter"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PassWEnter"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PassWConfirm"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/Btn_SingUp"
            app:cornerRadius="20dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>