<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_4"
    tools:context=".ActivityCreate">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@color/FondFormulary"
        android:elevation="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NewActivity"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_NameAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/InNameAct"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_Depart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Departament"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_Muni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Municipio"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_Place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ExactPlace"
            android:inputType="text"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_Descp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/Descrip"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Tx_Price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Price"
            android:inputType="text"
            android:padding="20dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:backgroundTint="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="205dp"
            android:layout_height="57dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Txt_02"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_gravity="center_vertical|center_horizontal"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:onClick="ActCreat"
            android:text="@string/Btn_SingUp"
            app:cornerRadius="20dp"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>