<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/FondFormulary">

        <LinearLayout
            android:id="@+id/contact_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:alpha="0.8"
            android:background="@drawable/border"
            android:backgroundTintMode="add"
            android:elevation="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/Iv_Act"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@mipmap/ic_launcher"
                android:background="@drawable/border2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Tv_NameAct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/NameAct"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:background="@drawable/border"/>

                <TextView
                    android:id="@+id/Tv_Depart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/Departament"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/border"/>

                <TextView
                    android:id="@+id/Tv_Municipio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:text="@string/Municipio"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:background="@drawable/border"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/Tv_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Descrip"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/border"/>

    </LinearLayout>

</LinearLayout>
